--- a/source/articles/2013-10-15-css-reset.html.markdown
+++ b/source/articles/2013-10-15-css-reset.html.markdown
@@ -14,7 +14,8 @@ tags: example
 
 ###css reset
 
-```ruby
+```css
+
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,
 input,textarea,p,blockquote,th,td{margin:0;padding:0;}   
 
@@ -37,14 +38,15 @@ abbr,acronym{border;0;}
 
 ###文字
 ```css
-.f12[font-size:12px;}
-.f13[font-size:13px;}
-.f14[font-size:14px;}
-.f16[font-size:16px;}
-.f20[font-size:20px;}
 
-.fb[font-weight:bold;}
-.fn[font-weight:normal;}
+.f12{font-size:12px;}
+.f13{font-size:13px;}
+.f14{font-size:14px;}
+.f16{font-size:16px;}
+.f20{font-size:20px;}
+
+.fb{font-weight:bold;}
+.fn{font-weight:normal;}
 
 .t2{text-indent:2em;}
 
@@ -58,6 +60,7 @@ abbr,acronym{border;0;}
 
 ###定位
 ```css
+
 .tl{text-align:left;}
 .tc{text-align:center;}
 .tr{test-align:right;}
@@ -91,6 +94,7 @@ abbr,acronym{border;0;}
 
 ###长度高度
 ```css
+
 .w10{width:10px;}
 .w20{width:20px;}
 .w30{width:30px;}
@@ -121,6 +125,7 @@ abbr,acronym{border;0;}
 ###边距
 
 ```css
+
 .m10{margin:10px;}
 .m15{margin:15px;}
 .m30{margin:10px;}
